# libpicostd

./: CMakeLists.txt  README.md
cmake/: picostd.pc.in  picostdConfig.cmake.in
src/: alloc.c  alloc.h  arena.c  arena.h  args.c  args.h  conversion.c  conversion.h  cpubind.c  cpubind.h  errors.c  errors.h  picomath.h  picostd.c  picostd.h  waitpkg.c  waitpkg.h
src/priv/: utils.h
